Ingress/Deploy-home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ig
  labels:
    app: nginx-ig
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ig
  template:
    metadata:
      name: home-template
      labels:
        app: nginx-ig
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - name: nginx-port
          containerPort: 80
...
---
apiVersion: v1
kind: Service
metadata:
  name: home-svc
spec:
  type: ClusterIP
  selector:
    app: nginx-ig
  ports:
  - name: svc-port
    protocol: TCP
    port: 80
    targetPort: 80
