Ingress/deploy-laptop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-laptop
  labels:
    app: tomcat-ig
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat-ig
  template:
    metadata:
      name: laptop-template
      labels:
        app: tomcat-ig
    spec:
      conatiners:
      - name: tomcat-container
        image: tomcat:latest
        ports:
        - containerPort: 8080
...
---
apiVersion: v1
kind: Service
metadat:
  name: laptop-svc
spec:
  type: ClusterIP
  selector:
    app: tomcat-ig
  ports:
  - name: svc-port
    protocol: TCP
    port: 80
    targetPort: 8080
