Ingress/deploy-mobile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-mobile
  labels:
    app: httpd-IG
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-IG
  template:
    metadata:
      name: mobile-template
      labels:
        app: httpd-IG
    spec:
      conatiners:
      - name: httpd-container
        image: httpd:latest
        ports:
        - containerPort: 80
...
---
apiVersion: v1
kind: Service
metadat:
  name: mobile-svc
spec:
  type: ClusterIP
  selector:
    app: httpd-IG
  ports:
  - name: svc-port
    protocol: TCP
    port: 80
    targetPort: 80
