Ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: nginx-ingress 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  ingressClassName: nginx 
  rules: 
  - host: a31468bf696ce483fb1dcd08bebf7ebe-64a199ba5dd8cc92.elb.ap-south-1.amazonaws.com
    http: 
      paths: 
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: my-svc-home 
            port: 
              number: 80 
      - path: /mobile 
        pathType: Prefix 
        backend: 
          service: 
            name: my-svc-mobile 
            port: 
              number: 80 
      - path: /laptop 
        pathType: Prefix 
        backend:  
          service:  
            name: my-svc-laptop 
            port:  
              number: 8080
