Ingress/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: home-svc
            port:
              number: 80

      - path: /mobile
        pathType: Prefix
        backend:
          service:
            name: mobile-svc
            port:
              number: 80

      - path: /laptop
        pathType: Prefix
        backend:
          service:
            name: laptop-svc
            port:
              number: 80
